@@ -1,6 +1,7 @@
 Revision history for Smartcat-App
 
 {{$NEXT}}
+        - Support UTF-8 filenames under Unix
 
 0.0.6  2021-03-12 21:41:10 UTC
         - Reverted addition of `auto-assign` paramenter
